[PE] Respect hit test clip behavior throughout PaintLayer::HitTestLayer

Hit tests can ignore clips and PaintLayer::HitTestLayer partially
honored this setting but did not pass it along when computing clip
rects for each layer fragment.

Bug: 817186
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: Icedf0470dfb06bb68f7f3c11a26a9a475262ac74
Reviewed-on: https://chromium-review.googlesource.com/942471
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Commit-Queue: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#540230}
Former-commit-id: af58743dbd695a1feec4cd13268dcc58214ed1bb